Changes from jTDS 0.9
=========================

12/03/2004 - Alin Sinpalean
 o Corrected an issue in SQLParser that prevented CallableStatements from
   working properly with procedures containing semicolons in their name (e.g.
   "test;1").
 o Modified BlobImpl.getBytes() and ClobImpl.getString() to return as much data
   as available instead of throwing an SQLException if the length parameter is
   too big (this is my understanding of the API documentation).
 o Removed ColData from CVS (forgot to do it when applying the patch).
 o Applied Mike's patch [1077886] XA Emulation mode.

12/02/2004 - Alin Sinpalean
 o Added a unit test (and made a couple of minor fixes) for column collation
   support. Seems to work fine now.
 o Fixed TimestampTest.testWriteDate() to actually test whether dates are
   written correctly (i.e. w/o their time component) into the DB.

12/01/2004 - Alin Sinpalean
 o Applied patch [1076337] Elimination of ColData class. Thanks a lot, Mike for
   all the effort!
 o Applied patch [1076383] ResultSetMetaData for more complex statements for
   SQL Server.

11/30/2004 - Alin Sinpalean
 o Corrected bug [1075977] setObject() causes SQLException.

11/29/2004 - Alin Sinpalean
 o Fixed some NPEs caused by the new per column collation support.
 o Applied Mike's fix for [1074356] TDS 4/5 Login fails with latest CVS code.
 o Applied Mike's fix for [1074096] Incorrect data type determine on dataset
   meta data.
 o Implemented support for reading character data using per column collations
   for SQL Server 2000.

11/26/2004 - Alin Sinpalean
 o Corrected a bug which was causing Statement.setMaxRows() to not work with
   cursor-based ResultSets.

11/24/2004 - Alin Sinpalean
 o Extracted getConnection(callerReference) out of BlobImpl and ClobImpl and
   moved it to Support.
 o Created the CharsetInfo class to hold both information about a character set
   (non-static fields) and provide support for loading and retrieving character